--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,7 +14,7 @@
     }
     .user-name {
       font-weight: bold;
-      color: #4c6ef5;
+      color: #000000;
       margin-right: 15px;
     }
     .logout-btn {
@@ -28,7 +28,7 @@
     }
     .admin-badge {
       display: inline-block;
-      background-color: #4c6ef5;
+      background-color: #000000;
       color: white;
       font-size: 12px;
       padding: 3px 6px;
@@ -40,7 +40,7 @@
       margin-left: 20px;
     }
     .admin-link {
-      color: #4c6ef5;
+      color: #000000;
       text-decoration: none;
       font-weight: bold;
     }
@@ -64,7 +64,7 @@
           <button id="logoutBtn" class="logout-btn">로그아웃</button>
         </div>
         
-        <a href="/" class="return-home" style="background-color: #12B886; color: white; padding: 8px 15px; border-radius: 5px; font-weight: bold; text-decoration: none; transition: all 0.3s ease; box-shadow: 0 2px 5px rgba(0,0,0,0.2);" onmouseover="this.style.backgroundColor='#0ca678'; this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 8px rgba(0,0,0,0.3)';" onmouseout="this.style.backgroundColor='#12B886'; this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 5px rgba(0,0,0,0.2)';">Hwaseon URL 단축기</a>
+        <a href="/" class="return-home" style="background-color: #12B886; color: white; padding: 8px 15px; border-radius: 5px; font-weight: bold; text-decoration: none; transition: all 0.3s ease; box-shadow: 0 2px 5px rgba(0,0,0,0.2);" onmouseover="this.style.backgroundColor='#0ca678'; this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 8px rgba(0,0,0,0.3)';" onmouseout="this.style.backgroundColor='#12B886'; this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 5px rgba(0,0,0,0.2)';">AMOS URL 단축기</a>
       </div>
     </div>
     <div class="dashboard-actions">
