--- a/public/multiple.html
+++ b/public/multiple.html
@@ -34,14 +34,14 @@
         .file-label {
             display: inline-block;
             padding: 10px 15px;
-            background-color: #5f76e8;
+            background-color: #000000;
             color: white;
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s;
         }
         .file-label:hover {
-            background-color: #4c6ef5;
+            background-color: #000000;
         }
         .file-name {
             margin-top: 10px;
@@ -86,7 +86,7 @@
         }
         .login-btn {
             padding: 6px 12px;
-            background-color: #4c6ef5;
+            background-color: #000000;
             color: white;
             border: none;
             border-radius: 4px;
@@ -97,7 +97,7 @@
             transition: background-color 0.2s;
         }
         .login-btn:hover {
-            background-color: #3b5bdb;
+            background-color: #000000;
         }
         .logout-btn {
             padding: 5px 10px;
@@ -113,11 +113,11 @@
         .user-name {
             font-weight: bold;
             margin-right: 10px;
-            color: #4c6ef5;
+            color: #000000;
         }
         .admin-badge {
             display: inline-block;
-            background-color: #4c6ef5;
+            background-color: #000000;
             color: white;
             font-size: 12px;
             padding: 2px 5px;
@@ -268,7 +268,7 @@
             modal.innerHTML = `
                 <div class="modal-content" style="width: 380px; text-align: center; padding: 30px 20px;">
                     <div class="modal-header" style="margin-bottom: 15px;">
-                        <div class="modal-title" style="font-size: 20px; font-weight: bold; color: #4c6ef5;">로그인 필요</div>
+                        <div class="modal-title" style="font-size: 20px; font-weight: bold; color: #000000;">로그인 필요</div>
                     </div>
                     <div style="margin: 20px 0; line-height: 1.6;">
                         <p>대시보드 기능은 회원에 한하여 가능합니다.</p>
