--- a/public/login.html
+++ b/public/login.html
@@ -54,7 +54,7 @@
       font-weight: 500;
     }
     .login-tab.active {
-      background-color: #4c6ef5;
+      background-color: #000000;
       color: white;
       font-weight: 600;
     }
@@ -78,14 +78,14 @@
       box-sizing: border-box;
     }
     .form-group input:focus {
-      border-color: #4c6ef5;
+      border-color: #000000;
       box-shadow: 0 0 0 3px rgba(76, 110, 245, 0.15);
       outline: none;
     }
     .login-btn {
       width: 100%;
       padding: 14px;
-      background-color: #4c6ef5;
+      background-color: #000000;
       color: white;
       border: none;
       border-radius: 8px;
@@ -96,7 +96,7 @@
       margin-top: 5px;
     }
     .login-btn:hover {
-      background-color: #3b5bdb;
+      background-color: #000000;
     }
     .login-btn:active {
       transform: scale(0.98);
@@ -106,7 +106,7 @@
       text-align: center;
     }
     .login-links a {
-      color: #4c6ef5;
+      color: #000000;
       text-decoration: none;
       font-size: 14px;
       font-weight: 500;
